--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: ohgun tech blog
-url: ohgun-github.io
+url: ohgun.github.io
 locale: ko-KR
 email:
 description: >- # this means to ignore newlines until "baseurl:"
