--- a/_config.yml
+++ b/_config.yml
@@ -10,23 +10,24 @@
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# you will see them accessed via {{ site.title }}, {{ http://site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: ohgun tech blog
-url: "https://ohgun.github.io"
-baseurl: ""
-locale: ko-KR
+name: ohgun
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+FastAPI, LLM, MSA, ODA, AI 시스템을 설계하고 구현하는 개발 기록
+
+url: https://ohgun.github.io
+baseurl: "" # 반드시 비워두기
+
+timezone: Asia/Seoul
+locale: ko-KR
 twitter_username: username
 github_username: username
-minimal_mistakes_skin: default
 search: true
-
+minimal_mistakes_skin: "dark"
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
@@ -34,10 +35,10 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: Asia/Seoul
+timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
-  - _pages
+- _pages
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -53,66 +54,66 @@ include:
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-include-cache
+- jekyll-paginate
+- jekyll-sitemap
+- jekyll-gist
+- jekyll-feed
+- jemoji
+- jekyll-include-cache
 
 author:
-  name   : "ohgun"
-  avatar : "/assets/images/avatar.png"
-  bio    : "FASTAPI, LLM, ODA"
-  links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+name   : "OhGun"
+avatar : "/assets/images/avatar.png"
+bio    : "FastAPI · LLM · ODA"
+links:
+- label: "Website"
+icon: "fas fa-fw fa-link"
+url: "https://ohgun.kr"
+- label: "X"
+icon: "fab fa-fw fa-x-twitter"
+url: "https://x.com/ohgun"
+- label: "GitHub"
+icon: "fab fa-fw fa-github"
+url: "https://github.com/ohgun"
+- label: "Instagram"
+icon: "fab fa-fw fa-instagram"
+url: "https://instagram.com/ohgun"
 
 footer:
-  links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+links:
+- label: "Twitter"
+icon: "fab fa-fw fa-twitter-square"
+url: "https://x.com"
+- label: "GitHub"
+icon: "fab fa-fw fa-github"
+url: "https://github.com"
+- label: "Instagram"
+icon: "fab fa-fw fa-instagram"
+url: "https://instagram.com"
 
 defaults:
-  # _posts
-  - scope:
-      path: ""
-      type: posts
-    values:
-      layout: single
-      author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
-  # _pages
-  - scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: single
-      author_profile: true
+# _posts
+- scope:
+path: ""
+type: posts
+values:
+layout: single
+author_profile: true
+read_time: true
+comments: true
+share: true
+related: true
+# _pages
+- scope:
+path: "_pages"
+type: pages
+values:
+layout: single
+author_profile: true
 
 category_archive:
-  type: liquid
-  path: /categories/
+type: liquid
+path: /categories/
 tag_archive:
-  type: liquid
-  path: /tags/
+type: liquid
+path: /tags/
